Issue #8708 by tuj: Moved activation to own controller.

--- a/partials/not-activated.html
+++ b/partials/not-activated.html
@@ -1,5 +1,7 @@
-<h1>Screen activation</h1>
-<form data-ng-submit="submitActivationCode()" data-ng-cloak="">
-  <input data-ng-model="activationCode" type="text" placeholder="Activation code" required autofocus>
-  <button type="submit">Activate</button>
-</form>
+<section data-ng-controller="NotActivatedController">
+  <h1>Screen activation</h1>
+  <form data-ng-submit="submitActivationCode()">
+    <input data-ng-model="activationCode" type="text" placeholder="Activation code" required autofocus>
+    <button type="submit">Activate</button>
+  </form>
+</section>
