--- a/partials/show-content.html
+++ b/partials/show-content.html
@@ -8,3 +8,7 @@
     <ik-slide ik-slide="slide" ik-array-id="arrayIndex" ik-index="$index"></ik-slide>
   </div>
 </div>
+<div class="progress">
+  <div class="progress-bar" data-ng-style="progressBarStyle"></div>
+  <div class="progress-box">{{progressBoxElementsIndex}} / {{progressBoxElements}}</div>
+</div>
