--- a/css/styles.css
+++ b/css/styles.css
@@ -58,5 +58,9 @@ body {
 }
 
 .vjs-poster {
-  display: none;
+  display: none !important;
+}
+
+.vjs-loading-spinner {
+  display:none !important;
 }
