Issue #8780 by tuj: Fixed active events. Removed progressbar when only one slide.

--- a/partials/show-content.html
+++ b/partials/show-content.html
@@ -8,7 +8,7 @@
     <ik-slide ik-slide="slide" ik-array-id="1" ik-index="$index"></ik-slide>
   </div>
 </div>
-<div class="progress">
+<div class="progress" data-ng-hide="slides[arrayIndex].length <= 1">
   <div class="progress-bar" data-ng-style="progressBarStyle"></div>
   <div class="progress-box">{{progressBoxElementsIndex}} / {{progressBoxElements}}</div>
 </div>
