--- a/partials/show-content.html
+++ b/partials/show-content.html
@@ -1,14 +1,18 @@
-<div data-ng-show="arrayIndex === 0" class="slide-block">
-  <div data-ng-repeat="slide in slides[0]" data-ng-show="currentIndex === $index && arrayIndex === 0" class="slide">
-    <ik-slide ik-slide="slide" ik-array-id="0" ik-index="$index" ik-show="currentIndex === $index && arrayIndex === 0"></ik-slide>
+<div data-ng-show="displayIndex === 0" class="slide-block">
+  <div data-ng-repeat="channelKey in channelKeys[0]">
+    <div data-ng-repeat="slide in channels[0][channelKey]" data-ng-show="channelIndex === channelKey && slideIndex === $index && displayIndex === 0" class="slide">
+      <ik-slide ik-slide="slide" ik-array-id="0" ik-channel-id="channelKey" ik-index="$index" ik-show="channelIndex === channelKey && slideIndex === $index && displayIndex === 0"></ik-slide>
+    </div>
   </div>
 </div>
-<div data-ng-show="arrayIndex === 1" class="slide-block">
-  <div data-ng-repeat="slide in slides[1]" data-ng-show="currentIndex === $index && arrayIndex === 1" class="slide">
-    <ik-slide ik-slide="slide" ik-array-id="1" ik-index="$index" ik-show="currentIndex === $index && arrayIndex === 1"></ik-slide>
+<div data-ng-show="displayIndex === 1" class="slide-block">
+  <div data-ng-repeat="channelKey in channelKeys[1]">
+    <div data-ng-repeat="slide in channels[1][channelKey]" data-ng-show="channelIndex === channelKey && slideIndex === $index && displayIndex === 1" class="slide">
+      <ik-slide ik-slide="slide" ik-array-id="1" ik-channel-id="channelKey" ik-index="$index" ik-show="channelIndex === channelKey && slideIndex === $index && displayIndex === 1"></ik-slide>
+    </div>
   </div>
 </div>
-<div class="progress" data-ng-hide="slides[arrayIndex].length <= 1">
+<div class="progress" data-ng-hide="slides[displayIndex].length <= 1">
   <div class="progress-bar" data-ng-style="progressBarStyle"></div>
   <div class="progress-box">{{progressBoxElementsIndex}} / {{progressBoxElements}}</div>
 </div>
