--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,10 @@
 body {
   cursor: none;
   overflow: hidden;
+  background-color: black;
+  color: white;
+  padding: 0;
+  margin: 0;
 }
 
 .slide {
