Issue #AR-172 by tuj: Fixed issues where fallback image blocked the activation screen. Added . to xhr requests when reporting errors in activation process

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,4 +103,16 @@ body {
 .fallback-image.ng-hide {
   opacity:0;
   display: none;
+  z-index: 0;
+}
+
+.content {
+  z-index: 1;
+  background: black;
+}
+
+.not-activated {
+  z-index: 2;
+  position: absolute;
+  cursor: pointer;
 }
