--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,11 @@
 body {
+  font-family: Helvetica, Arial, sans-serif;
   overflow: hidden;
   background-color: black;
   color: white;
   padding: 0;
   margin: 0;
+  cursor: none;
 }
 
 .slide {
@@ -111,6 +113,7 @@ body {
 }
 
 .not-activated {
+  padding: 0 17px;
   z-index: 2;
   position: absolute;
   cursor: pointer;
